<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/profile_picture_rounded"
            android:contentDescription="@string/profile_picture"
            android:layout_marginTop="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullname"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_profile"/>

        <Button
            android:id="@+id/btn_email"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:inputType="text"
            app:icon="@drawable/ic_mail"
            android:drawablePadding="6dp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_fullname"
            tools:ignore="TextViewEdits"/>

        <Button
            android:id="@+id/btn_username"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:inputType="text"
            app:icon="@drawable/ic_user"
            android:drawablePadding="6dp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_email"
            tools:ignore="TextViewEdits"/>

        <Button
            android:id="@+id/btn_github_name"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:inputType="text"
            app:icon="@drawable/ic_github"
            android:drawablePadding="6dp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_username"
            tools:ignore="TextViewEdits"/>

        <Button
            android:id="@+id/btn_ig_name"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/ig_name"
            android:inputType="text"
            app:icon="@drawable/ic_instagram"
            android:drawablePadding="6dp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_github_name"
            tools:ignore="TextViewEdits"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintTop_toBottomOf="@id/btn_ig_name"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>