<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/detail_img"
            android:layout_width="match_parent"
            android:layout_height="238dp"
            android:background="@drawable/item_background"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/sample_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="22dp"
            app:layout_constraintTop_toBottomOf="@+id/detail_img"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/sample_date"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"/>

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:background="@color/black"
            app:layout_constraintStart_toEndOf="@id/tv_time"
            app:layout_constraintEnd_toStartOf="@id/tv_author"
            app:layout_constraintTop_toTopOf="@id/tv_time"
            app:layout_constraintBottom_toBottomOf="@id/tv_time"/>

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            tools:text="@string/sample_author"
            app:layout_constraintStart_toEndOf="@id/divider"
            app:layout_constraintTop_toBottomOf="@id/tv_title"/>

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            tools:text="@tools:sample/lorem/random"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_time"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>